--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.43.0",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
